Public comment period development

--- a/modules/project-comments/client/views/public-comments/add.html
+++ b/modules/project-comments/client/views/public-comments/add.html
@@ -47,7 +47,7 @@
             <div class="row">
                 <div class="form-group col-sm-12">
                     <label class="control-label">Your Comment</label>
-                    <textarea ng-model="s.comment.comment" class="form-control" rows="10"></textarea>
+                    <textarea id="content" rows="10" name="content" class="form-control" ng-model="s.comment.comment" required></textarea>
                 </div>
             </div>
             <div class="row">
