Moving to unified BC Government branding

--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -2,7 +2,7 @@
 	<nav class="navbar">
 
 		<div class="navbar-header">
-			<div class="navbar-brand"><a ui-sref="projects" href><img src="{{logo}}" /></a></div>
+			<div class="navbar-brand"><a ui-sref="projects" href><img src="{{logo}}" alt="Government of B.C." title="Government of B.C."></a></div>
 		</div>
 
 		<ul class="custom-nav">
