--- a/modules/core/client/views/footer.client.view.html
+++ b/modules/core/client/views/footer.client.view.html
@@ -1,10 +1,10 @@
 <div class="app-footer clearfix" ng-cloak>
 	<div id="main-foot-content">
 			<div class="pull-left">
-        <span ng-if="footer.environment === 'EAO'">Environmental Assessment Office, Victoria BC</span>
-				<span ng-if="footer.environment === 'MEM'">Ministry of Energy and Mines, Province of British Columbia</span>
+		<span ng-if="footer.environment === 'MEM'">Ministry of Energy and Mines, Province of British Columbia</span>
       </div>
-			<div class="pull-right">
+			<div class="pull-left">
+				<a href="/" title="Home">Home</a> |
 				<a target="_new" href="http://www.gov.bc.ca/com/copyright.html" title="BC Government Copyright Information">Copyright</a> |
 				<a target="_new" href="http://www.gov.bc.ca/com/disclaimer.html" title="BC Government Warranty Disclaimer and Limitation of Liabilities Information">Disclaimer</a> |
 				<a target="_new" href="http://www.gov.bc.ca/com/privacy.html" title="BC Government Privacy Information">Privacy</a> |
