Sweeping change to artifacts/vcs based on new UI requirements.

--- a/modules/vcs/client/views/vc-edit.html
+++ b/modules/vcs/client/views/vc-edit.html
@@ -67,6 +67,8 @@
 				</div>
 			</div>
 		</div>
+
+		<tmpl-artifact-display x-mode="'edit'" x-artifact="vc.artifact" x-project="project"></tmpl-artifact-display>
 		
 		<div class="form-footer clearfix">
 			<div class="pull-right">
