Allow edit name of all artifacts.

--- a/modules/artifacts/client/views/artifact-edit.html
+++ b/modules/artifacts/client/views/artifact-edit.html
@@ -4,16 +4,18 @@
 	</div>
 
 	<div class="view-body-container">
+		<div class="row top-nav-lower-margin ">
+			<div class="col-sm-4 col-md-4">
+				<div class="form-group">
+					<label for="name" class="control-label">Name</label>
+					<input id="name" name="name" ng-model='artifact.name' class="form-control input-sm" required>
+				</div>
+			</div>
+		</div>
 
 		<!-- If it's an artifact collection, lets show the 'add artifact to this artifact' UI. -->
 		<div ng-if="artifact.isArtifactCollection">
 				<div class="row top-nav-lower-margin ">
-					<div class="col-sm-4 col-md-4">
-						<div class="form-group">
-							<label for="pillar" class="control-label">Name</label>
-							<input id="pillar" name="pillar" ng-model='artifact.name' class="form-control input-sm" required>
-						</div>
-					</div>
 					<div class="col-sm-12 form-group">
 						<div class="btn btn-default">
 							<div x-artifact-vc x-current="artifact" x-project="project">
