--- a/modules/projects/client/views/project-partials/project.schedule.html
+++ b/modules/projects/client/views/project-partials/project.schedule.html
@@ -13,11 +13,16 @@
 			<!-- BEGIN: PROJECT PHASE CONTAINER -->
 			<div class="panel panel-default accordion">
 				<div class="panel-heading" role="tab" id="phaseOne">
+
 					<a class="clearfix" role="button" data-toggle="collapse" href="#{{phase.name}}" aria-expanded="true" aria-controls="{{phase.name}}">
 						<span class="glyphicon glyphicon-plus pull-left"></span>
                     	<span class="glyphicon glyphicon-minus pull-left"></span>
 						<span class="pull-left">{{phase.name}}</span>
+						<div ng-if="phase.status === 'Complete'" class=" pull-right">
+							<div class="btn btn-default btn-sm" disabled="disabled">Phase Completed</div>
+						</div>
 					</a>
+
 				</div>
 				<div id="{{phase.name}}" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="{{phase.name}}">
 					<div class="panel-body">
@@ -28,7 +33,7 @@
 									data-toggle="modal"
 									data-target="#addMilestoneModal">Add Milestone</button>
 							<button ng-if="phase.code !== 'pre-submission'"
-									class="btn btn-default btn-sm"
+									class="btn btn-default btn-sm hidden"
 									data-toggle="modal"
 									data-target="#addCommentSessionModal">Add Comment Period</button>
 							<button class="btn btn-default btn-sm pull-right"
@@ -74,9 +79,6 @@
 								</td>
 							</tr>
 						</table>
-						<div class="button-bar bottom">
-							<button class="btn btn-default btn-sm" disabled="disabled">Phase Completed</button>
-						</div>
 					</div>
 				</div>
 			</div>
