--- a/modules/core/client/views/footer.client.view.html
+++ b/modules/core/client/views/footer.client.view.html
@@ -9,6 +9,7 @@
 				<a target="_new" href="http://www.gov.bc.ca/com/disclaimer.html" title="BC Government Warranty Disclaimer and Limitation of Liabilities Information">Disclaimer</a> |
 				<a target="_new" href="http://www.gov.bc.ca/com/privacy.html" title="BC Government Privacy Information">Privacy</a> |
 				<a target="_new" href="http://www.gov.bc.ca/com/accessibility.html" title="BC Government Accessibility Information">Accessibility</a> |
+				<a href ui-sref="contact" title="Contact Us">Contact Us</a> | 
 				<a ng-show="!footer.authentication.user" ui-sref="authentication.signin">Log In (Siteminder)</a>
         <span ng-show="!footer.authentication.user"> | </span> <a ng-show="!footer.authentication.user" href ui-sref="authentication.local">Log In (local)</a>
         <!-- TODO: Siteminder! get the Siteminder logout url and set it here -->
