Visual design - Fixing project invitations UI

--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -3946,6 +3946,19 @@ section.project-info {
 }
 
 
+/* PROJECT INVITATIONS 
+----------------------------- */
+.project-invitations-view {
+	.tab-pane {
+		padding-top: 3rem;
+	}
+	
+	.well {
+		margin-bottom: 0;
+		min-height: 39.5rem;
+	}
+}
+
 /* SELECT TOPIC MODAL VIEW
 ----------------------------- */
 .select-topic-modal {
