final conversion files plus the gear for setting application level permissions stuck into the news feed

--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -5,11 +5,12 @@
 			<div class="navbar-brand"><a ui-sref="projects" href><img src="{{logo}}" alt="Government of B.C." title="Government of B.C."></a></div>
 		</div>
 
+
 		<ul class="custom-nav">
 			<li>
 				<a href ui-sref="projects">
 					<span class="glyphicon glyphicon-home"></span>
-					<span>HOME</span>
+					<span>HOMIE</span>
 				</a>
 			</li>
 			<li ng-if="ENV === 'EAO'" class="dashboard-item" ng-show="authentication.user">
