--- a/modules/core/client/views/menu.client.view.html
+++ b/modules/core/client/views/menu.client.view.html
@@ -55,7 +55,8 @@
 			</li>
 		</ul><!-- / PROJECT CLIENT MENUS -->
 
-		<ul class="list-unstyled" ng-show="menu.projectMenu.shouldRender(menu.authentication.user, menu.project)">
+		<!-- <ul class="list-unstyled" ng-show="menu.projectMenu.shouldRender(menu.authentication.user, menu.project)"> -->
+		<ul class="list-unstyled">
 			<li ng-repeat="item in menu.projectMenu.items | orderBy: 'position'"
 			    ng-if="item.shouldRender(menu.authentication.user, menu.project);"
 					ng-class="{ active: $state.includes(item.state) }" class="{{item.class}}">
